Global url updated

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     </div>
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js" integrity="sha384-Gr6Lu2Ajx28mzwyVR8CFkULdCU7kMlZ9UthllibdOSo6qAiN+yXNHqtgdTvFXMT4" crossorigin="anonymous"></script>
     <script>
-        let socket = io.connect('http://localhost:5000'); //This is obtained from the cdn we included above. io is provided in the library only.
+        let socket = io.connect('https://notecraft-8bhc.onrender.com'); //This is obtained from the cdn we included above. io is provided in the library only.
     </script>
     <script src="./boardTools.js"></script>
     <script src="./canvas.js"></script>
